# polyline

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: base_app.cpp  base_app.h  camera.cpp  camera.h  input_controller.cpp  input_controller.h  orbit_controller.cpp  orbit_controller.h  types.h  util.cpp  util.h
data/shaders/dash_polyline/: polyline.fs
data/shaders/point/: point.fs  point.gs  point.vs
data/shaders/polyline/: polyline.fs  polyline.gs  polyline.vs
data/shaders/quad/: old_quad.vs  quad.gs  quad.vs
data/shaders/screen/: screen.fs  screen.gs  screen.vs
data/shaders/solid_polyline/: polyline.fs  polyline.gs  polyline.vs
data/shaders/square/: square.fs  square.gs  square.vs
data/shaders/wireframe/: wireframe.fs  wireframe.gs  wireframe.vs  wireframe_circle.fs  wireframe_circle.gs  wireframe_quad.fs  wireframe_quad.gs
doc/: tasks.md
polyline/: CMakeLists.txt  app.cpp  app.h  main.cpp  viewport.h
polyline/drawer/: dash_polyline_drawer.cpp  dash_polyline_drawer.h  old_quad_drawer.cpp  old_quad_drawer.h  polyline_drawer.cpp  polyline_drawer.h  quad_drawer.cpp  quad_drawer.h  solid_polyline_drawer.cpp  solid_polyline_drawer.h
polyline_complex/: CMakeLists.txt  app.cpp
polyline_complex/drawer/: screen_drawer.cpp  screen_drawer.h  square_drawer.cpp  square_drawer.h
src/: CMakeLists.txt  app.cpp  app.h  drawer.cpp  drawer.h  main.cpp  types.h  util.cpp
src/drawer/: dash_polyline_drawer.h  old_quad_drawer.cpp  old_quad_drawer.h  polyline_drawer.cpp  polyline_drawer.h  quad_drawer.cpp  quad_drawer.h  solid_polyline_drawer.h
test_blending/: CMakeLists.txt  app.h  main.cpp
test_line_width/: CMakeLists.txt  app.cpp  app.h  main.cpp
test_line_width/drawer/: quad_drawer.h  wireframe_drawer.h
test_stl/: CMakeLists.txt  app.cpp  app.h  main.cpp  microstl.h
test_stl/drawer/: object_drawer.cpp  object_drawer.h
tests/: CMakeLists.txt  main.cpp  time_elapsed_query.cpp  time_elapsed_query.h
wireframe/: CMakeLists.txt  app.cpp  app.h  main.cpp
wireframe/drawer/: quad_drawer.cpp  wireframe_drawer.cpp  wireframe_drawer.h
